--- a/client/src/views/App.css
+++ b/client/src/views/App.css
@@ -216,7 +216,7 @@ main .form-hide{
 }
 main .search {
     position: relative;
-    left: 550px;
+    left: 100px;
     width: 50%;
     height: 100%;
     display: flex;
@@ -247,6 +247,30 @@ main .insights{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap:1.6rem;
+}
+main .delete-btn{
+    color: rgb(75, 129, 211);
+    
+}
+
+main .delete-btn:hover {
+    
+    font-size: 27px;
+    color:  rgb(241, 27, 12);
+    transition: all 300ms ease;
+
+}
+main .edit-btn{
+    color: rgb(75, 129, 211);
+    padding-top: 2rem;
+}
+
+main .edit-btn:hover {
+    
+    font-size: 27px;
+    color:  rgb(65, 252, 143);
+    transition: all 300ms ease;
+
 }
 
 main .insights > div{
@@ -416,10 +440,10 @@ main .light{
     color: black;
     
 }
-.show-all{
+.submit{
     text-align: center;
     position: relative;
-    left: 450px;
+    left: 410px;
     
 }
 
